<resources>
    <string name="app_name" translatable="false">RASPED</string>
    <string name="st_version">V 1.0</string>
    <string name="st_bienvenido">Welcome</string>
    <string name="ms_acceder">Sign in to start</string>
    <string name="st_contrasena">Passsword</string>
    <string name="st_telefono">Telephone</string>
    <string name="st_acceder">Sing in</string>
    <string name="st_personal">Staff</string>
    <string name="st_horarios">Schedules</string>
    <string name="st_puestos">Rols</string>
    <string name="st_configuracion">Settings</string>
    <string name="title_activity_administrador">Administrador</string>
    <string name="title_activity_usuario">User</string>
    <string name="title_activity_usuarios">Users</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="st_hoy">Today</string>
    <string name="st_semanal">Weekly</string>
    <string name="st_mensual">Monthly</string>
    <string name="st_escanear">To scan</string>
    <string name="st_capturar">To type</string>
    <string name="title_activity_registrador">Typer</string>
    <string name="ms_camposVacios">Do not leave blank fields</string>
    <string name="st_nombre">First Name</string>
    <string name="st_apPMaterno">Last Name</string>
    <string name="st_apPaterno">Last Name</string>
    <string name="st_horario">shifts</string>
    <string name="st_puesto">Rol</string>
    <string name="st_lada">Lada</string>
    <string name="ms_usuarioNoEncontrado">User no found, try again.</string>
    <string name="ms_credencialesIncorrectas">Incorrect password or phone number</string>
    <string name="st_nombreHorario">Schedules name</string>
    <string name="st_hrEntrada">Check in time</string>
    <string name="st_hrSalida">Departure time</string>
    <string name="st_inicioComida">Food start</string>
    <string name="st_finComida">End of food</string>
    <string name="st_tolerancia">Tolerance</string>
    <string name="st_aceptar">accept</string>
    <string name="st_cancelar">Cancel</string>
    <string name="sp_datosPersonal_key" translatable="false">sp_datos_del_personal_key</string>
    <string name="sp_nombrePersonal_key" translatable="false">sp_nombrePersonal_key</string>
    <string name="sp_idPersonal_key" translatable="false">sp_idPersonal_key</string>
    <string name="sp_cupoPersonal_key" translatable="false">sp_cupoPersonal_key</string>
    <string name="sp_telefonoPersonal_key" translatable="false">sp_telefonoPersonal_key</string>
    <string name="sp_horarioPersonal_key" translatable="false">sp_horarioPersonal_key</string>
    <string name="sp_puestoPersonal_key" translatable="false">sp_puestoPersonal_key</string>
    <string name="sp_usuarioPersonal_key" translatable="false">sp_usuarioPersonal_key</string>
    <string name="title_activity_configuracion">Settings</string>
    <string name="pref_header_general" translatable="false">General</string>
    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">This application was created with open source software.</string>
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications" translatable="false">Notifications</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="st_miCuenta">My Count</string>
    <string name="st_notificaciones">Notifications</string>
    <string name="st_informacion">Information</string>
    <string name="ms_informacionTitulo">A care manager, in the mobile community.  RASPED and logatipos are dedicated brands.  This application was created with open source software.</string>
    <string name="ms_restablecerContrasena">Type your telephone number to send you  a key to restore password</string>
    <string name="pref_default_display_name">name</string>
    <string name="sp_apellidoMPersonal_key" translatable="false">sp_apellidoMPersonal_key</string>
    <string name="sp_apellidoPPersonal_key" translatable="false">sp_apellidoPPersonal_key</string>
    <string name="sp_sedePersonal_key" translatable="false">sp_sedePersonal_key</string>
    <string name="sp_ladaPersonal_key" translatable="false">sp_ladaPersonal_key</string>
    <string name="pref_editarDatos">Edit my dates</string>
    <string name="sp_dimensionArrayPersonal_key" translatable="false">sp_dimensionArrayPersonal_key</string>
    <string name="sp_idHorario_key" translatable="false">sp_idHorario_key</string>
    <string name="sp_hrNombre_key" translatable="false">sp_hrNombre_key</string>
    <string name="sp_hrEntrada_key" translatable="false">sp_hrEntrada_key</string>
    <string name="sp_hrComidaI_key" translatable="false">sp_hrComidaI_key</string>
    <string name="sp_hrComidaF_key" translatable="false">sp_hrComidaF_key</string>
    <string name="sp_hrSalida_key" translatable="false">sp_hrSalida_key</string>
    <string name="sp_tolerancia_key" translatable="false">sp_tolerancia_key</string>
    <string name="sp_datosHorarios_key" translatable="false">sp_datosHorarios_key</string>
    <string name="sp_datosPuestos_key" translatable="false">sp_datosPuestos_key</string>
    <string name="sp_idPuesto_key" translatable="false">sp_idPuesto_key</string>
    <string name="sp_nombrePuesto_key" translatable="false">sp_nombrePuesto_key</string>
    <string name="sp_fkArea_key" translatable="false">sp_fkArea_key</string>
    <string name="sp_dimensionPuestos_key" translatable="false">sp_dimensionPuestos_key</string>
    <string name="sp_dimensionHorarios_key" translatable="false">sp_dimensionHorarios_key</string>
    <string name="st_cupo">Cupo</string>
    <string name="st_sede">Headquarters</string>
    <string name="st_actualizar">Update</string>
    <string name="st_cerrarSesion">Sing out</string>
    <string name="st_registrarEntrada">Check in</string>
    <string name="st_registrarSalida">Check out</string>
    <string name="st_registrarComidaInicio">Food time started</string>
    <string name="st_registrarComidaFin">Food time Finished</string>
    <string name="st_hey">Hey!</string>
    <string name="st_recuperarContrasena">Restore password</string>
    <string name="st_registroExitoso">Successfully</string>
    <string name="sp_tiempos_key" translatable="false">sp_tiempos_key</string>
    <string name="ms_errorDatos">Failed to capture data</string>
    <string name="st_adicionExitosa">Successful addition</string>
    <string name="ms_contrasenaEnviada">The password will be sent to the registered number</string>
    <string name="ms_tuContrasena">Your new password in RASPED is</string>
    <string name="st_asistencia">Attendance</string>
    <string name="st_retardos">Delays</string>
    <string name="st_faltas">Absences</string>
    <string name="st_visualizar">View by</string>
    <string name="st_diario">Daily</string>
    <string name="sp_asistencias_key" translatable="false">sp_asistencias_key</string>
    <string name="sp_id_personal_key" translatable="false">sp_id_personal_key</string>
    <string name="sp_id_asistencias_key" translatable="false">sp_id_asistencias_key</string>
    <string name="sp_id_retardos_key" translatable="false">sp_id_retardos_key</string>
    <string name="sp_id_falta_key" translatable="false">sp_id_falta_key</string>
    <string name="sp_nombre_personal_key" translatable="false">sp_nombre_personal_key</string>
    <string name="sp_apellido_m_key" translatable="false">sp_apellido_m_key</string>
    <string name="sp_apellido_p_key" translatable="false">sp_apellido_p_key</string>
    <string name="sp_fecha_key" translatable="false">sp_fecha_key</string>
    <string name="sp_hr_entrada_key" translatable="false">sp_hr_entrada_key</string>
    <string name="sp_hr_comida_i_key" translatable="false">sp_hr_comida_i_key</string>
    <string name="sp_hr_comida_f_key" translatable="false">sp_hr_comida_f_key</string>
    <string name="sp_hr_salida_key" translatable="false">sp_hr_salida_key</string>
    <string name="sp_numAsistencias_key" translatable="false">sp_numAsistencias_key</string>
    <string name="sp_numRetardos_key" translatable="false">sp_numRetardos_key</string>
    <string name="sp_numFaltas_key" translatable="false">sp_numFaltas_key</string>
    <string name="sp_retardos_key" translatable="false">sp_retardos_key</string>
    <string name="sp_faltas_key" translatable="false">sp_faltas_key</string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_miCuenta">My count</string>
    <string name="pref_notificaciones">Notifications</string>
    <string name="pref_notificacionesDesc">Configures notifications for assists, faults and delays.</string>
    <string name="pref_notificacionAsistencias">Notify Assists</string>
    <string name="pref_notificacionesRetardos">Notify delays</string>
    <string name="pref_notificacionesFaltas">Notify non-attendance</string>
    <string name="pref_informacion">About</string>
    <string name="pref_editarDatosDesc">Edit personal information about you.</string>
    <string name="pref_editarContrasena">Edit password</string>
    <string name="pref_editarContrasenaDesc">Edit your access password.</string>
    <string name="st_antContrasena">Old password</string>
    <string name="st_nvaContrasena">New password</string>
    <string name="st_repContrasena">Repeat password</string>
    <string name="pref_acercaDe">About</string>
    <string name="pref_informacionDes">See information about this app</string>
    <string name="pref_cerrarSesion">Sign out</string>
    <string name="pref_cerrarSesionDesc">Restore and sign out</string>
    <string name="ms_cerrarSesion">Are you sure to sign out?</string>
    <string name="st_eliminar">Delete</string>
    <string name="st_tipo">Type</string>
    <string name="title_activity_todos_horarios">Schedules</string>
    <string name="st_agregar">Add</string>
    <string name="st_administrador">Admin</string>
    <string name="st_registrador">Register</string>
    <string name="st_nuevoRetardo">New delay</string>
</resources>