<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adminprospera.rasped_tool.HorariosActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/et_hr_nombreHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/st_nombreHorario"
        android:maxLength="20"
        android:maxLines="1"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/et_hr_entrada"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/st_hrEntrada"
            android:ems="7"
            android:inputType="time"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="106dp" />

        <EditText
            android:id="@+id/et_hr_salida"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/st_hrEntrada"
            android:ems="7"
            android:inputType="time"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="106dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/et_hr_comidaInicio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/st_inicioComida"
            android:ems="7"
            android:inputType="time"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="106dp" />

        <EditText
            android:id="@+id/et_hr_comidaFin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/st_finComida"
            android:ems="7"
            android:inputType="time"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="106dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_hr_tolerancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/st_tolerancia"
        android:maxLength="20"
        android:maxLines="1"
        android:textAlignment="center"/>


</LinearLayout>
